# Time-Keeper

./: .gitignore  Cargo.toml  README.md  TODO.md  run.ps1  run.sh
.github/workflows/: continous_integration.yml  release.yml  rust_ci.yml
src/: main.rs
src/commands/: duplicate_finder.rs  messages.rs  mod.rs  tab_identifier.rs  time_keeper.rs  time_keeper_messages.rs
src/controllers/: date_duration_calculator.rs  date_factory.rs  duplicates.rs  duration_calculator.rs  duration_factory.rs  editor.rs  end_time_calculator.rs  line_numbers.rs  mod.rs  parse_duplicates.rs  prepend_line_numbers.rs  time_calculator.rs  time_converter.rs  time_duration_calculator.rs  time_duration_factory.rs  time_factory.rs  time_parser.rs
src/models/: application_state.rs  duplicate_finder.rs  duration.rs  end_time.rs  mod.rs  new_line.rs  time_converter.rs  time_keeper.rs  time_or_duration.rs
src/views/: application_state.rs  calculator_view.rs  duplicate_finder_view.rs  duration.rs  duration_view.rs  editor_view.rs  end_time_view.rs  mod.rs  time_converter_view.rs
src/views/layout/: menu_bar_view.rs  mod.rs  tab_bar_view.rs
